--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,12 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+
+        repositories {
+            flatDir {
+                dirs '..\\..\\rde-lib\\build\\libs'
+            }
+        }
     }
 }
 rootProject.name = "RDW RDE Android Client Sample"
