--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
 
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,35 +15,38 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RDESample">
         <activity
-            android:name=".EnrollmentActivity"
-            android:exported="true" >
+            android:name=".ScanApiTokenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true"
+            android:label="@string/title_activity_scan_token"
+            android:theme="@style/Theme.RDESample.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".EnrollmentActivity"
+            android:exported="true">
+        </activity>
         <activity
             android:name=".EnrollmentReadDocumentActivity"
-            android:exported="true" >
+            android:exported="true">
         </activity>
-
         <activity
             android:name=".MessagesListActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
-
         <activity
             android:name=".DecryptMessageActivity"
             android:exported="true" />
-
         <activity
             android:name=".ShowMessageActivity"
             android:exported="true" />
-
     </application>
+
 </manifest>
