--- a/settings.gradle
+++ b/settings.gradle
@@ -4,12 +4,14 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
 
-        repositories {
-            flatDir {
-                dirs '..\\..\\rde-lib\\build\\libs'
-            }
-        }
+//        repositories {
+//            flatDir {
+//                //dirs '..\\..\\rde-lib\\build\\libs'
+//                dirs 'D:\\Repos\\rdwgithub\\rde-lib\\build\\libs'
+//            }
+//        }
     }
 }
 rootProject.name = "RDW RDE Android Client Sample"
 include ':app'
+
