--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nl.rijksoverheid.rdw.rde.client">
-
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -14,26 +13,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RDESample">
         <activity
-            android:name=".activities.ScanApiTokenActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:exported="true"
-            android:label="@string/title_activity_scan_token"
-            android:theme="@style/Theme.RDESample.Fullscreen">
+            android:name=".activities.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activities.ScanApiTokenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true"
+            android:label="@string/title_activity_scan_token"
+            android:theme="@style/Theme.RDESample.Fullscreen">
+        </activity>
         <activity
             android:name=".activities.EnrollmentActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".activities.EnrollmentReadDocumentActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".activities.MessagesListActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".activities.DecryptMessageActivity"
             android:exported="true" />
@@ -42,28 +45,20 @@
             android:exported="true" />
         <activity
             android:name=".activities.TestRdeDecryptionActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="true">
         </activity>
         <activity
             android:name=".activities.TestRdeRoundTripActivity"
-            android:exported="true" >
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".activities.TestCrossPlatformDecryptionActivity"
-            android:exported="true" >
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".activities.TestRdeEnrollmentActivity"
-            android:exported="true" >
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".activities.TestCaSessionActivity"
-            android:exported="true" >
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
