--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
             android:name=".activities.EnrollmentReadDocumentActivity"
             android:exported="true" />
         <activity
+            android:name=".activities.EnterMrzActivity"
+            android:exported="true"></activity>
+        <activity
             android:name=".activities.MessagesListActivity"
             android:exported="true"></activity>
         <activity
