Attempt to force jmrtd to 0.7.32

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 
     //MRTDs
     implementation 'net.sf.scuba:scuba-sc-android:0.0.23'
-    implementation 'org.jmrtd:jmrtd:0.7.32'
+    implementation ('org.jmrtd:jmrtd:0.7.32') { version { strictly("0.7.32")}}
 
     //QR codes
     //implementation 'me.dm7.barcodescanner:zxing:1.9.8'
