--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,12 @@
 plugins {
     id 'com.android.application'
 }
-
+android {
+    //...
+    lintOptions {
+        abortOnError false
+    }
+}
 android {
     compileSdk 30
 
