--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     defaultConfig {
         applicationId "nl.rijksoverheid.rdw.rde.client"
         minSdk 26
-        targetSdk 26
+        targetSdk 31
         versionCode 4
         versionName "1.2.1"
 
@@ -40,25 +40,22 @@ android {
 
 dependencies {
 
-    implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
-    implementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
-    implementation 'com.google.zxing:core:3.3.0'
-
     //General
-    implementation 'org.projectlombok:lombok:1.18.22'
-
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     //MRTDs
-    implementation 'net.sf.scuba:scuba-sc-android:0.0.23'
-    implementation ('org.jmrtd:jmrtd:0.7.32') { version { strictly( "0.7.32" )}}
+    implementation ('org.jmrtd:jmrtd:0.7.32') { version { strictly( "0.7.32" )}} //Exception handling
+    //implementation 'net.sf.scuba:scuba-sc-android:0.0.23' No longer required since com.mefitihe:remotedocumentencryption:1.1.3
 
     //QR codes
-    //implementation 'me.dm7.barcodescanner:zxing:1.9.8'
-    //implementation 'com.google.zxing:core:3.3.0'
+    //TODO why are 2 versions here?
+    //implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
+    implementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
+    implementation 'com.google.zxing:core:3.4.1'
 
     //RDE Support
-    implementation files('lib\\rde-lib-1.1-SNAPSHOT.jar')
+    implementation 'com.mefitihe:remotedocumentencryption:1.1.3'
+    implementation 'com.mefitihe:remotedocumentencryption.messageformat.zipped:0.0.1'
 
     //Web api
     implementation 'com.google.code.gson:gson:2.9.0'
